--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,15 @@
 *.exr filter=lfs diff=lfs merge=lfs -text
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+
+# 自动处理所有文本文件
+* text=auto
+
+# 强制 C# 脚本、Shader、Meta 文件使用 LF 换行符（跨平台最稳定）
+*.cs text eol=lf
+*.shader text eol=lf
+*.meta text eol=lf
+*.unity text eol=lf
+*.asset text eol=lf
+*.prefab text eol=lf
+*.mat text eol=lf
